DOC-1909: mobile-platform-compatibility.adoc
Edited file down to the preferred-by-everyone language, in which we support TinyMCE Mobile on vendor-supported versions of Android and iOS inside the vendor’s default browser (Chrome and Safari respectively).

--- a/modules/ROOT/partials/misc/mobile-platform-compatibility.adoc
+++ b/modules/ROOT/partials/misc/mobile-platform-compatibility.adoc
@@ -1,4 +1,4 @@
-== Supported Mobile Platforms (1)
+== Supported Mobile Platforms
 
 {productname} mobile is tested against, and is designed to run on, the default browser running on a currently vendor-supported version of both Android and iOS.
 
@@ -16,24 +16,5 @@
 Google supports the current and two previous versions of Android.
 
 Apple supports the current and previous versions of iOS.
-
-NOTE: By default, both Android and iOS automatically update both the operating system and default browser. Consequently, {productname} mobile is only supported on the most recent releases of each supported operating system and browser combination.
-
-
-
-== Supported Mobile Platforms (2)
-
-{productname} mobile is tested against, and is designed to run on, the default browser running on a the current and previous versions of both Android and iOS.
-
-[cols="1,1",options="header"]
-|===
-|Operating System |Default browser
-
-|Android
-|Chrome
-
-|iOS
-|Safari
-|===
 
 NOTE: By default, both Android and iOS automatically update both the operating system and default browser. Consequently, {productname} mobile is only supported on the most recent releases of each supported operating system and browser combination.
