--- a/modules/ROOT/partials/misc/mobile-platform-compatibility.adoc
+++ b/modules/ROOT/partials/misc/mobile-platform-compatibility.adoc
@@ -1,6 +1,6 @@
 == Supported Mobile Platforms
 
-{productname} mobile is tested against, and is designed to run on, the default browser running on a currently vendor-supported version of both Android and iOS.
+{productname} mobile is tested against, and is designed to run on, the default browser running on either the current or penultimate version of either Android and iOS.
 
 [cols="1,1",options="header"]
 |===
@@ -13,8 +13,22 @@
 |Safari
 |===
 
-Google supports the current and two previous versions of Android.
+By default, both Google and Apple automatically update their operating systems and their default browsers.
 
-Apple supports the current and previous versions of iOS.
+Android and iOS, again by default, automatically update themselves with patches, security fixes, and minor updates. However, major updates — that is updates from one major version of the operating system to the next major version — are announced but not installed without user or system administrator input.
 
-NOTE: By default, both Android and iOS automatically update both the operating system and default browser. Consequently, {productname} mobile is only supported on the most recent releases of each supported operating system and browser combination.
+The default browser on each operating system is similarly updated with patches, security fixes, and minor updates. Unlike with the operating system, however, major updates — that is updates from one major version of the default browser to the next major version — are also automatically installed by default.
+
+Consequently, {companynameformal} only supports {productname} mobile on the most recent release of each of the four supported operating system and browser combinations.
+
+That is, {productname} mobile is supported on
+
+* the most recent release of the current version of Android in combination with the most recent release of Chrome for the current version of Android;
+
+* the most recent release of the penultimate version of Android in combination with the most recent release of Chrome for the penultimate version of Android.
+
+* the most recent release of the current version of iOS in combination with the most recent release of Safari for the current version of iOS.
+
+* the most recent release of the penultimate version of iOS in combination with the most recent release of Safari for the the penultimate version of iOS.
+
+However, {productname} mobile is not supported on any beta or other pre-production releases of either the mobile operating system or its default browser.
