DOC-1910: sanitizing-html-inpug-and….adoc
Another missing comma delimiting a sub-clause is no longer missing.

--- a/modules/ROOT/partials/security/sanitizing-html-input-and-protecting-against-xss-attackes-dom-parser-and-dom-purify.adoc
+++ b/modules/ROOT/partials/security/sanitizing-html-input-and-protecting-against-xss-attackes-dom-parser-and-dom-purify.adoc
@@ -53,4 +53,4 @@ tinymce.init({
 });
 ----
 
-WARNING: Turning `DomPurify` off leaves {productname}, and any application using {productname} extremely vulnerable to XSS attacks. Only turn `DomPurify` off if alternative HTML and XML sanitisation and XSS protections are in place.
+WARNING: Turning `DomPurify` off leaves {productname}, and any application using {productname}, extremely vulnerable to XSS attacks. Only turn `DomPurify` off if alternative HTML and XML sanitisation and XSS protections are in place.
