--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -387,6 +387,10 @@
 ** xref:keyboard-shortcuts.adoc[TinyMCE Keyboard shortcuts]
 * Security
 ** xref:security.adoc[Security guide]
+*** xref:security.adoc#reporting-tinymce-security-issues[Reporting TinyMCE security issues]
+*** xref:security.adoc#xref:what-we-do-to-maintain-security-for-tinymce[What we do to maintain security for TinyMCE]
+*** xref:security.adoc#configuring-content-security-policy-csp-for-tinymce[Configuring Content Security Policy (CSP) for TinyMCE]
+*** xref:security.adoc#general-security-risks-for-user-input-elements[General security risks for user input elements]
 ** xref:tinymce-and-csp.adoc[Content Security Policies (CSP)]
 ** xref:tinymce-and-cors.adoc[Cross-Origin Resource Sharing (CORS)]
 * Release information
